Atualização da aba contatos, foram adicionados 3 formas de contatos

--- a/contato.html
+++ b/contato.html
@@ -1,3 +1,95 @@
-Contato 43991564242
+    <!DOCTYPE html>
+<html lang="PT-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Contato </title>
+    <link rel="stylesheet" href="style_contato.css">
+</head>
 
-Em construção
+<body>
+    <div class="container">
+    <nav> 
+        <ul>
+            <li >
+                <a href="index.html">
+                    Sobre Mim
+                </a>
+            </li>
+            <li>
+                <a href="projeto.html">
+                    Projetos   
+                </a>
+            </li>
+            <li >
+                <a href="contato.html">
+                    Contato
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+        <h2>
+            <a href="https://contate.me/viniciusflorian" target="_blank" rel="noopener noreferrer">
+                Clique para falar pelo Whatsapp <br>
+            </a> 
+            <p>
+                (43) 9 9156-4242 
+            </p>
+        </h2>
+        <div class="center">
+            <a href="https://contate.me/viniciusflorian" target="_blank" rel="noopener noreferrer">
+                <img src="./imagens/whatsapp.png" alt="" srcset="">
+            </a>
+        </div>
+        <h2>
+            <a href="https://contate.me/viniciusflorian" target="_blank" rel="noopener noreferrer">
+                Email <br>
+            </a> 
+            <p>
+                viniciushpfloriano@outlook.com
+            </p>
+        </h2>
+        <div class="center">
+            <a href="" >
+                <img src="./imagens/marketing-de-email.png" alt="" srcset="">
+            </a>
+        </div>
+        <h2>
+            <a href="https://www.google.com.br/maps/@-23.1821865,-50.6559302,12z" target="_blank" rel="noopener noreferrer">
+                Localização <br>
+            </a> 
+            <p>
+                Cornélio Procópio-PR e Região.
+            </p>
+        </h2>
+        <div class="center">
+            <a href="https://www.google.com.br/maps/@-23.1821865,-50.6559302,12z"  target="_blank" rel="noopener noreferrer">
+                <img src="./imagens/localizacao.png" alt="" srcset="">
+            </a>
+        </div>
+    </header>
+    <main>
+        <section>
+            <h3>  </h3>
+        </section>
+    </main>
+    <footer>
+        <a href="https://github.com/VHPFchefe" target="_blank" rel="noopener noreferrer">
+            <img src="./imagens/github.png">
+            <p>Github</p>
+        </a>
+        <a href="https://www.linkedin.com/in/viniciusfloriano/" target="_blank" rel="noopener noreferrer">
+            <img src="./imagens/linkedin.png">
+            <p>LinkedIN</p>
+        </a>
+        <a href="https://www.instagram.com/viniciushpfloriano/" target="_blank" rel="noopener noreferrer">  
+            <img src="./imagens/instagram.png">
+            <p>Instagram</p>
+        </a>
+    </footer>
+    <script src="script.js"></script>
+    </div>
+</body>
+</html>
