--- a/index.html
+++ b/index.html
@@ -37,28 +37,29 @@
             Vinícius Floriano
         </h1>
         <h2>
-            Customizações e Projetos Especiais na Forlogic Software :D
+            Customizações e Projetos Especiais na Forlogic Software
         </h2>
     </header>
     <main>
         <section>
             <h3> Sobre Mim</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Faixa branca de Jiu Jitsu, velho de mais para ser novo e novo de mais para ser velho. <br>
+                Quando acabam de me conhecer me acham chato, depois que me conhecem parece que acabaram de me conhecer ¯¯\_(ヅ)_/¯
             </p>
         </section>
 
         <section>
             <h2> Formações </h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Ensino Médio e Youtube
             </p>
         </section>
 
         <section>
-            <h1> Cursos </h3>
+            <h1>  </h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                
             </p>
         </section>
     </main>
