Primeira versão de envio de emails

--- a/contato.html
+++ b/contato.html
@@ -44,7 +44,7 @@
             </a>
         </div>
         <h2>
-            <a href="https://contate.me/viniciusflorian" target="_blank" rel="noopener noreferrer">
+            <a href="email.html" target="_blank" rel="noopener noreferrer">
                 Email <br>
             </a> 
             <p>
@@ -52,7 +52,7 @@
             </p>
         </h2>
         <div class="center">
-            <a href="" >
+            <a href="email.html" >
                 <img src="./imagens/marketing-de-email.png" alt="" srcset="">
             </a>
         </div>
