--- a/projeto.html
+++ b/projeto.html
@@ -5,48 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Contato </title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_projetos.css">
 </head>
 
 <body>
-    <div class="container">
-    <nav> 
-        <ul>
-            <li >
-                <a href="index.html">
-                    Sobre Mim
-                </a>
-            </li>
-            <li>
-                <a href="projeto.html">
-                    Projetos   
-                </a>
-            </li>
-            <li >
-                <a href="contato.html">
-                    Contato
-                </a>
-            </li>
-        </ul>
-    </nav>
-    
-    <div id="escrita"> Nada aqui ainda </div>
-    
-    <footer>
-        <a href="https://github.com/VHPFchefe" target="_blank" rel="noopener noreferrer">
-            <img src="./imagens/github.png">
-            <p>Github</p>
-        </a>
-        <a href="https://www.linkedin.com/in/viniciusfloriano/" target="_blank" rel="noopener noreferrer">
-            <img src="./imagens/linkedin.png">
-            <p>LinkedIN</p>
-        </a>
-        <a href="https://www.instagram.com/viniciushpfloriano/" target="_blank" rel="noopener noreferrer">  
-            <img src="./imagens/instagram.png">
-            <p>Instagram</p>
-        </a>
-    </footer>
-    <script src="script.js"></script>
+    <header>
+        <nav> 
+            <a href="index.html"> Sobre Mim </a>
+            <a href="projeto.html"> Projetos </a>
+            <a href="contato.html"> Contato </a>
+        </nav>
+    </header>
+    <div id="corpo">
+        <main>
+
+            <div id="escrita"> Nada aqui ainda </div>
+        </main>
+
+        <footer>
+            <a href="https://github.com/VHPFchefe" target="_blank" rel="noopener noreferrer">
+                <img src="./imagens/github.png">
+                <p>Github</p>
+            </a>
+            <a href="https://www.linkedin.com/in/viniciusfloriano/" target="_blank" rel="noopener noreferrer">
+                <img src="./imagens/linkedin.png">
+                <p>LinkedIN</p>
+            </a>
+            <a href="https://www.instagram.com/viniciushpfloriano/" target="_blank" rel="noopener noreferrer">  
+                <img src="./imagens/instagram.png">
+                <p>Instagram</p>
+            </a>
+        </footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
