Expansão do site vanilla
foram removidos alguns arquivos de fonte;
Foi adicionado uma nova guia de navegação para expandir os projetos e conteúdos

--- a/projeto.html
+++ b/projeto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Contato </title>
+    <title> Projetos </title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_projetos.css">
 </head>
@@ -13,16 +13,33 @@
     <header>
         <nav> 
             <a href="index.html"> Sobre Mim </a>
-            <a href="projeto.html"> Projetos </a>
+            <a href="projeto.html"> Portifólio </a>
             <a href="contato.html"> Contato </a>
         </nav>
     </header>
     <div id="corpo">
         <main>
+            <!-- Projetos -->
+            <div class="project" id="projetos">
+                <a href=""> 
+                    <!-- <p>Entenda mais sobre meu trabalho</p> -->
+                    <h2>Projetos</h2>
+                </a>
+            </div>
 
-            <div id="escrita"> Nada aqui ainda </div>
+            <div class="project" id="livro">
+                <a href="projetos/Desenvolvimento_pessoal.html">
+                    <h2>Conteúdos</h2>
+                </a>
+            </div>
+
+            <div class="project">
+                <h2>Parceiros</h2>
+                <a href="">
+                    <div id="escrita"> Nada aqui ainda </div>
+                </a>
+            </div>
         </main>
-
         <footer>
             <a href="https://github.com/VHPFchefe" target="_blank" rel="noopener noreferrer">
                 <img src="./imagens/github.png">
@@ -38,6 +55,7 @@
             </a>
         </footer>
     </div>
+    <!-- <a href='https://www.freepik.com/photos/library-books'>Library books photo created by jcomp - www.freepik.com</a> -->
     <script src="script.js"></script>
 </body>
 </html>
