--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav> 
             <a href="index.html"> Sobre Mim </a>
-            <a href="projeto.html"> Projetos </a>
+            <a href="projeto.html"> Portifólio </a>
             <a href="contato.html"> Contato </a>
         </nav>
     </header>
