--- a/contato.html
+++ b/contato.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <nav> 
-            <a href="index.html"> Sobre Mim </a>
-            <a href="projeto.html"> Portifólio </a>
-            <a href="contato.html"> Contato </a>
+            <a href="index.html"   id="nav_index"> Sobre Mim </a>
+            <a href="projeto.html" id="nav_projeto"> Portifólio </a>
+            <a href="contato.html" id="nav_contato"> Contato </a>
         </nav>
     </header>
 
