--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Vinícius Floriano</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_index.css">
 </head>
 
 <body>
     <header>
         <nav> 
-            <a href="index.html"> Sobre Mim </a>
-            <a href="projeto.html"> Portifólio </a>
-            <a href="contato.html"> Contato </a>
+            <a href="index.html"   id="nav_index"> Sobre Mim </a>
+            <a href="projeto.html" id="nav_projeto"> Portifólio </a>
+            <a href="contato.html" id="nav_contato"> Contato </a>
         </nav>
     </header>
         <div id="corpo">
@@ -34,7 +35,6 @@
                             <h3>Quem eu sou</h3>
                             <p>Natural do interior do Paraná, sul do Brasil.</p>
                             <p>Amante de esportes e desafios, medalhista de jogos escolares e campeonatos amadores de Futebol e Jiu-Jitsu.</p>
-
                             
                             <h3>O que eu faço</h3>
                             <p>Trabalhando a 2 anos com tecnologia, desde o relacionamento ao cliente até o desenvolvimento de soluções como relatórios, dashboards e formulários de calibração na área metrológica</p>
