--- a/projeto.html
+++ b/projeto.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <nav> 
-            <a href="index.html"> Sobre Mim </a>
-            <a href="projeto.html"> Portifólio </a>
-            <a href="contato.html"> Contato </a>
+            <a href="index.html"   id="nav_index"> Sobre Mim </a>
+            <a href="projeto.html" id="nav_projeto"> Portifólio </a>
+            <a href="contato.html" id="nav_contato"> Contato </a>
         </nav>
     </header>
     <div id="corpo">
@@ -33,10 +33,9 @@
                 </a>
             </div>
 
-            <div class="project">
-                <h2>Parceiros</h2>
-                <a href="">
-                    <div id="escrita"> Nada aqui ainda </div>
+            <div class="project" id="parceiros">
+                <a href="projetos/Parceirias.html">
+                    <h2>Parceiros</h2>
                 </a>
             </div>
         </main>
